--- a/SimpleWebsiteAndAPI/index.html
+++ b/SimpleWebsiteAndAPI/index.html
@@ -94,6 +94,74 @@
 
     <script>
         //service("", "{}", function (response) { }, function (response) { });
+        function createUser(username, firstname, lastname, student) {
+            service("createUser", "{userName:\"" + username + "\", firstName:\"" + firstname + "\", lastName:\"" + lastname + "\", student:" + student + "}",
+                function (response) {
+                    //showInvoices(selectedVendor);
+                }, function (response) {
+                    alert("Error");
+                    console.log(response);
+                });
+        }
+        function getUser(username) {
+            service("getUser", "{userName:\"" + username +  "\"}",
+                function (response) {
+                    alert(response)
+                    //showInvoices(selectedVendor);
+                }, function (response) {
+                    alert("Error");
+                    console.log(response);
+                });
+        }
+        function setPreferences(username, favorite, leastFavorite) {
+            service("setPref", "{userName:\"" + username + "\", favorite:\"" + favorite + "\", leastFavorite:\"" + leastFavorite + "\"}",
+                function (response) {
+                    //showInvoices(selectedVendor);
+                }, function (response) {
+                    alert("Error");
+                    console.log(response);
+                });
+        }
+        function getPreferences(username) {
+            service("getPref", "{userName:\"" + username + "\"}",
+                function (response) {
+                    alert(response)
+                    //showInvoices(selectedVendor);
+                }, function (response) {
+                    alert("Error");
+                    console.log(response);
+                });
+        }
+        function setFact(id, type, content, longitude, latitude, date) {
+            service("SetFact", "{id:" + id + ", type:\"" + type + "\", content:\"" + content + 
+                "\", longitude:" + longitude + ", latitude:" + latitude + ", date:\"" + date + "\"}",
+                function (response) {
+                    //showInvoices(selectedVendor);
+                }, function (response) {
+                    alert("Error");
+                    console.log(response);
+                });
+        }
+        function setCompletedQuizzes(username, quizname, score) {
+            service("setCompleted", "{userName:\"" + username + "\", quizName:\"" + quizname + "\", score:" + score + "}",
+                function (response) {
+                    alert(response)
+                    //showInvoices(selectedVendor);
+                }, function (response) {
+                    alert("Error");
+                    console.log(response);
+                });
+        }
+        function getCompletedQuizzes(username) {
+            service("getCompleted", "{userName:\"" + username + "\"}",
+                function (response) {
+                    alert(response)
+                    //showInvoices(selectedVendor);
+                }, function (response) {
+                    alert("Error");
+                    console.log(response);
+                });
+        }
 
 
         $("#btnLoadFacts").click(function () {
